--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <body>
   <div class="container">
     <div class="logo">
-      <img src="logo.png" alt="TRIO Logo">
+      <img src="logo.jpg" alt="TRIO Logo">
     </div>
 
     <h1>Vehicle Audit Form</h1>
