--- a/index.html
+++ b/index.html
@@ -204,6 +204,26 @@
           <div>Lug Wrench</div>
         </label>
       </div>
+       <label class="photo-checkbox">
+          <input type="checkbox" name="auditItem[]" value="Headlight">
+          <span class="tick">✔</span>
+          <img src="headlight.jpg" alt="Headlight">
+          <div>Headlight</div>
+        </label>
+
+        <label class="photo-checkbox">
+          <input type="checkbox" name="auditItem[]" value="Backlight">
+          <span class="tick">✔</span>
+          <img src="backlight.jpg" alt="Backlight">
+          <div>Backlight</div>
+        </label>
+
+        <label class="photo-checkbox">
+          <input type="checkbox" name="auditItem[]" value="Side Mirror">
+          <span class="tick">✔</span>
+          <img src="mirror.jpg" alt="Side Mirror">
+          <div>Side Mirror</div>
+        </label>
 
       <label for="auditorName">Auditor Name</label>
       <input type="text" name="auditorName" id="auditorName" required>
