--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
           <div>Side Mirror</div>
         </label>
        </div>
+      <label for="damagePhoto">Upload Damage Photo (if any)</label>
+<input type="file" id="damagePhoto" name="damagePhoto" accept="image/*" capture="environment">
       <label for="auditorName">Auditor Name</label>
       <input type="text" name="auditorName" id="auditorName" required>
 
