--- a/index.html
+++ b/index.html
@@ -267,54 +267,53 @@
     </form>
   </div>
 <script>
-  async function handleSubmit(e) {
+  function handleSubmit(e) {
     e.preventDefault();
-
     const form = document.getElementById("auditForm");
     const formData = new FormData(form);
 
-    async function readFile(file) {
-      return new Promise((resolve) => {
+    const getBase64 = file =>
+      new Promise((resolve, reject) => {
         if (!file) return resolve("");
         const reader = new FileReader();
-        reader.onloadend = () => resolve(reader.result);
+        reader.onload = () => resolve(reader.result);
+        reader.onerror = reject;
         reader.readAsDataURL(file);
       });
-    }
 
-    const photoFront = await readFile(formData.getAll("damagePhoto")[0]);
-    const photoLeft = await readFile(formData.getAll("damagePhoto")[1]);
-    const photoRight = await readFile(formData.getAll("damagePhoto")[2]);
-    const photoBack = await readFile(formData.getAll("damagePhoto")[3]);
+    Promise.all([
+      getBase64(formData.get("photoFront")),
+      getBase64(formData.get("photoLeft")),
+      getBase64(formData.get("photoRight")),
+      getBase64(formData.get("photoBack"))
+    ]).then(([photoFront, photoLeft, photoRight, photoBack]) => {
+      const data = {
+        date: form.date.value,
+        vehicleNumber: form.vehicleNumber.value,
+        odometer: form.odometer.value,
+        auditItems: Array.from(form.querySelectorAll("input[name='auditItem[]']:checked")).map(i => i.value),
+        photoFront,
+        photoLeft,
+        photoRight,
+        photoBack,
+        auditorName: form.auditorName.value
+      };
 
-    const checklist = Array.from(form.querySelectorAll("input[name='auditItem[]']:checked")).map(i => i.value);
-
-    const payload = {
-      date: form.date.value,
-      vehicleNumber: form.vehicleNumber.value,
-      odometer: form.odometer.value,
-      "auditItem[]": checklist,
-      auditorName: form.auditorName.value,
-      photoFront,
-      photoLeft,
-      photoRight,
-      photoBack
-    };
-
-    fetch("https://script.google.com/macros/s/AKfycbyW41AKzh3-33hXMR_JbO4_andxAP8ylRwZrEL8xBpHEeq0BW-IBcYCPvk2wOyN8s6J/exec", {
-      method: "POST",
-      body: new URLSearchParams(payload)
-    })
-    .then(res => res.json())
-    .then(data => {
-      alert(data.message || "Submitted");
-      if (data.success) form.reset();
-    })
-    .catch(err => {
-      alert("Error: " + err.message);
+      fetch("https://script.google.com/macros/s/AKfycbyOowz3eL6gwqkdwDdthNXwIOftzIxAfcUddq6wA4y1QMm4AKJObvHJMDe9TLYWJhB9/exec", {
+        method: "POST",
+        body: JSON.stringify(data),
+        headers: { "Content-Type": "application/json" }
+      })
+        .then(response => response.json())
+        .then(result => {
+          alert(result.message);
+          if (result.success) form.reset();
+        })
+        .catch(error => alert("Upload failed: " + error));
     });
   }
 </script>
+
 
 </body>
 </html>
