--- a/index.html
+++ b/index.html
@@ -252,14 +252,18 @@
         </label>
       </div>
 
-      <label for="damagePhoto">Upload Damage Photo (front side)</label>
-      <input type="file" id="damagePhoto" name="damagePhoto" accept="image/*" capture="environment">
-      <label for="damagePhoto">Upload Damage Photo (lest side)</label>
-      <input type="file" id="damagePhoto" name="damagePhoto" accept="image/*" capture="environment">
-      <label for="damagePhoto">Upload Damage Photo (right any)</label>
-      <input type="file" id="damagePhoto" name="damagePhoto" accept="image/*" capture="environment">
-      <label for="damagePhoto">Upload Damage Photo (back side)</label>
-      <input type="file" id="damagePhoto" name="damagePhoto" accept="image/*" capture="environment">
+      <label for="photoFront">Upload Damage Photo (Front Side)</label>
+<input type="file" id="photoFront" name="photoFront" accept="image/*" capture="environment">
+
+<label for="photoLeft">Upload Damage Photo (Left Side)</label>
+<input type="file" id="photoLeft" name="photoLeft" accept="image/*" capture="environment">
+
+<label for="photoRight">Upload Damage Photo (Right Side)</label>
+<input type="file" id="photoRight" name="photoRight" accept="image/*" capture="environment">
+
+<label for="photoBack">Upload Damage Photo (Back Side)</label>
+<input type="file" id="photoBack" name="photoBack" accept="image/*" capture="environment">
+
       <label for="auditorName">Auditor Name</label>
       <input type="text" name="auditorName" id="auditorName" required>
 
