--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       padding: 25px;
       border-radius: 16px;
       box-shadow: 0 0 20px rgba(0, 255, 136, 0.2);
+      animation: fadeIn 0.8s ease-in;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
     .logo {
       text-align: center;
@@ -51,26 +56,36 @@
       border-radius: 8px;
       margin-bottom: 10px;
     }
+    input:focus, select:focus {
+      outline: none;
+      border: 2px solid #00ff88;
+      box-shadow: 0 0 8px #00ff88;
+    }
+    .audit-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+      gap: 15px;
+      margin-top: 10px;
+    }
     .photo-checkbox {
-      display: inline-block;
-      margin: 10px;
       cursor: pointer;
-      border: 3px solid transparent;
-      border-radius: 10px;
-      overflow: hidden;
       text-align: center;
       position: relative;
+      border-radius: 10px;
     }
     .photo-checkbox input[type="checkbox"] {
       display: none;
     }
     .photo-checkbox img {
-      width: 100px;
+      width: 100%;
       height: 100px;
       object-fit: cover;
       transition: 0.3s;
       border-radius: 10px;
       border: 2px solid #00ff88;
+    }
+    .photo-checkbox:hover img {
+      box-shadow: 0 0 10px #00ff88;
     }
     .photo-checkbox input[type="checkbox"]:checked + .tick {
       display: block;
@@ -117,7 +132,7 @@
       <img src="logo.jpg" alt="TRIO Logo">
     </div>
 
-    <h1>Vehicle Audit Form</h1>
+    <h1>Vehicle Audi Form</h1>
 
     <form id="auditForm" onsubmit="handleSubmit(event)">
       <label for="date">Date</label>
@@ -152,7 +167,7 @@
       <input type="number" name="odometer" id="odometer" step="0.1" required>
 
       <label>Audit Checklist</label>
-      <div>
+      <div class="audit-grid">
         <label class="photo-checkbox">
           <input type="checkbox" name="auditItem[]" value="AC Working">
           <span class="tick">✔</span>
@@ -239,7 +254,7 @@
         remarks: form.remarks.value
       };
 
-      fetch("https://script.google.com/macros/s/AKfycbzyIR5O6vd_yasdFbJizP-t6s0EU6tRPzk5vtW1JJL8D8Q98Ef4bfb86OAnvyN7QLbN/exec", {
+      fetch("https://script.google.com/macros/s/AKfycbz4f-j5t7fStJHQZvI3VvRbvBoFBcH_Y-QjY6JrU_ZkTHN9GptXZddzX-BOi2Kb8VXl/exec", {
         method: "POST",
         body: JSON.stringify(data),
         headers: { "Content-Type": "application/json" }
