--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <img src="logo.jpg" alt="TRIO Logo">
     </div>
 
-    <h1>Vehicle Audi Form</h1>
+    <h1>Vehicle Aud Form</h1>
 
     <form id="auditForm" onsubmit="handleSubmit(event)">
       <label for="date">Date</label>
