--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <img src="logo.jpg" alt="TRIO Logo">
     </div>
 
-    <h1>Vehicle Au Form</h1>
+    <h1>Vehicle Audit Form</h1>
 
     <form id="auditForm" onsubmit="handleSubmit(event)">
       <label for="date">Date</label>
@@ -254,17 +254,19 @@
         remarks: form.remarks.value
       };
 
-      fetch("https://script.google.com/macros/s/AKfycbypBh9TWQsalHRLV9UxI3R7neO_pBMAHD5UwdLj6ES14T-ErTyJUx3kBiDP5CbWGh0POA/exec", {
+      fetch("https://script.google.com/macros/s/AKfycbyTY0kTvhAj9-7I7XLXZ1dKVtVoqSeiXwW8F5J5kQ_vF8y1nVS9QWfjgwsJ8IfdnBdV_Q/exec", {
         method: "POST",
         body: JSON.stringify(data),
-        headers: { "Content-Type": "application/json" }
+        headers: {
+          "Content-Type": "application/json"
+        }
       })
-        .then(response => response.json())
-        .then(result => {
-          alert(result.message);
-          if (result.success) form.reset();
-        })
-        .catch(error => alert("Upload failed: " + error));
+      .then(response => response.json())
+      .then(result => {
+        alert(result.message);
+        if (result.success) form.reset();
+      })
+      .catch(error => alert("Upload failed: " + error));
     }
   </script>
 </body>
