--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <img src="logo.jpg" alt="TRIO Logo">
     </div>
 
-    <h1>Vehicle Audi Form</h1>
+    <h1>Vehicle Aud Form</h1>
 
     <form id="auditForm" onsubmit="handleSubmit(event)">
       <label for="date">Date</label>
@@ -254,7 +254,7 @@
         remarks: form.remarks.value
       };
 
-      fetch("https://script.google.com/macros/s/AKfycbx4XlcEpGl_HYmJBD6SVJ2ozATu49zVpE-zNqLcE7ZD4Ho2qQ9LAxDPYzfP_SzY27qwlA/exec", {
+      fetch("https://script.google.com/macros/s/AKfycbz2foU3x3e6gAM9hweRCBCDcyunwgn8vdRR_OvmuBQ4e7JweJzDYJqwXDwd942Ra9S8AQ/exec", {
         method: "POST",
         body: JSON.stringify(data),
         headers: {
