--- a/index.html
+++ b/index.html
@@ -141,11 +141,13 @@
       <label for="vehicleNumber">Vehicle Number</label>
       <select name="vehicleNumber" id="vehicleNumber" required>
         <option value="" disabled selected>Select Vehicle Number</option>
-        <option value="WB01BC4246">WB01BC4246</option>
+         <option value="WB01BC4246">WB01BC4246</option>
         <option value="WB01BC4245">WB01BC4245</option>
         <option value="WB01BC4238">WB01BC4238</option>
+        <option value="WB01BC4235">WB01BC4235</option>
         <option value="WB01BC4232">WB01BC4232</option>
         <option value="WB01BC4228">WB01BC4228</option>
+        <option value="WB01BC4224">WB01BC4224</option>
         <option value="WB01BC4220">WB01BC4220</option>
         <option value="WB01BC4216">WB01BC4216</option>
         <option value="WB01BC4215">WB01BC4215</option>
@@ -154,10 +156,12 @@
         <option value="WB01BC4206">WB01BC4206</option>
         <option value="WB01BC4201">WB01BC4201</option>
         <option value="WB01BC4188">WB01BC4188</option>
+        <option value="WB01BC4186">WB01BC4186</option>
         <option value="WB01BC4175">WB01BC4175</option>
         <option value="WB01BC4169">WB01BC4169</option>
         <option value="WB01BC4167">WB01BC4167</option>
         <option value="WB01BB8310">WB01BB8310</option>
+        <option value="WB01BB4228">WB01BB4228</option>
         <option value="WB05A3107">WB05A3107</option>
         <option value="WB05A3138">WB05A3138</option>
         <option value="WB04J2670">WB04J2670</option>
